--- a/server/config/.env.example
+++ b/server/config/.env.example
@@ -1,6 +1,6 @@
 # Database Configuration
 # Copy this file to .env and fill in your actual credentials
-DB_NAME=your_database_name
+DB_NAME=your_database_name # Database sql in database
 DB_USER=your_username
 DB_PASSWORD=your_password
 DB_HOST=localhost
